--- a/bibliography.bib
+++ b/bibliography.bib
@@ -512,3 +512,14 @@ author = "Matsui, Akihiko",
   year={2005},
   publisher={Cambridge University Press}
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Hilbe2018,
+  title={Partners and rivals in direct reciprocity},
+  author={Hilbe, Christian and Chatterjee, Krishnendu and Nowak, Martin A},
+  journal={Nature human behaviour},
+  volume={2},
+  number={7},
+  pages={469--477},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
