adds to explanation of the average utility form
Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

--- a/main.tex
+++ b/main.tex
@@ -233,8 +233,7 @@ against a \(N\) number of opponents is given by:
        {\prod\limits_{i=1} ^ N (\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)})}.
 \end{align}
 
-The proof of Eq.~(\ref{eq:tournament_utility}) is a straightforward algebraic
-manipulation.
+Eq.~(\ref{eq:tournament_utility}) is the average score (using Eq.~(\ref{eq:})) against the set of opponents.
 
 Estimating the utility of a memory-one strategy against any number of opponents
 without simulating the interactions is the main result used in the rest of this manuscript.
