--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
 \newtheorem{lemma}[theorem]{Lemma}
 \def\arraystretch{1.5}
 
-\title{Best response memory-one strategies with a theory of mind: the limitations
+\title{A theory of mind: Best responses to memory-one strategies. The limitations
 of extortion and restricted memory.}
 \author[1, *]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
