--- a/main.tex
+++ b/main.tex
@@ -411,7 +411,7 @@ the best response memory-one with a theory of mind is being more adaptable than 
 In~\cite{Hilbe2018} a similar behaviour is refereed to as the \textit{partners
 strategy}. Partners
 strategy aims to share the payoff for mutual cooperation, but it is ready
-to fight back when being exploited. In~\cite{Hilbe2018} they showed that partner strategies are
+to fight back when being exploited. In~\cite{Hilbe2018} it is shown that partner strategies are
 selected in evolutionary settings when populations are large and relationships
 stable and they allow for the evolution of cooperation. A best response memory-one strategy
 in evolutionary settings has not been incorporated in the study of this manuscript, however,
