--- a/response/main.tex
+++ b/response/main.tex
@@ -15,7 +15,7 @@ memory in the Prisoner's Dilemma RESPONSE TO REVIEWS}
 
 We would like to open this response by thanking the reviewers for their
 thoughtful comments and suggestions. We have fully taken their comments on board
-and made the necessary changes.
+and made significant modifications to both the mathematical arguments and the narrative. We feel this has greatly improved the work.
 
 The main modifications include the improvement of the theorems' proofs and the
 generalisation of our results regardless the PD payoff matrix. Moreover, we
