--- a/response/main.tex
+++ b/response/main.tex
@@ -94,7 +94,7 @@ and it's results.
     results section.''
 \end{verbatim}
 
-We have address this comment by including details of the SSE method and a better
+We have included more details of the SSE method and a better
 discussion of the results based on Table 1. We have also included plots of the
 SSE distributions that accompany Table 1.
 
