--- a/response/main.tex
+++ b/response/main.tex
@@ -112,7 +112,7 @@ SSE distributions that accompany Table 1.
 \end{verbatim}
 
 We thank the reviewer for their article recommendation. The findings of Hilbe et
- al and how our results relate to them, are discussed in the ``Results'' section.
+ al and how our results relate to them, are discussed in the ``Results'' section. % TODO Vince to add details
 
 \begin{verbatim}
     ``As a last point, I think that the flow of the paper could be improved. As it is
