--- a/response/main.tex
+++ b/response/main.tex
@@ -80,7 +80,7 @@ following equation (4).
     extortionate. ''
 \end{verbatim}
 
-We agree with the comment of the reviewer. We are not running a evolutionary
+We agree with the comment of the reviewer. We are not running a evolutionary % TODO Vince to modify
 tournament and now understand that our wording was misleading. We study best
 response memory-one strategies that include self interactions which in a sense are
 approximating evolutionary stable best response strategies. We have reworded
