--- a/response/main.tex
+++ b/response/main.tex
@@ -50,7 +50,8 @@ We have added further details on how to obtain the equation in the proof of Theo
 
 We agree with the comment of the reviewer. The utility was
 specific only for a given payoff matrix. We have generalised our result by
-considering the generalised payoffs \((R, S, T, P)\).
+considering the generalised payoffs \((R, S, T, P)\) and feel that not only is this a more useful 
+result and whilst we were worried that this closed form could be very messy it is in fact relatively elegant.
 
 \begin{verbatim}
      ``Theorem 3: The proof in the Appendix did not show how to obtain equations
