tweaks abstract to fit results
The current sentence is inline with our results. But could potentially
be changed after Vince writes the self interactions results

--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@ of extortion and restricted memory.}
     optimisation problem. Though extortionate memory-one strategies have gained
     much attention, we demonstrate that best response memory-one strategies do not
     behave in an extortionate way, and moreover, for memory-one strategies to be
-    evolutionary robust they need to be able to behave in a forgiving way. We
+    a best response to a group of opponents and themselves they need to be able to behave in a forgiving way. We
     also provide evidence that memory-one strategies suffer from their limited
     memory in multi agent interactions and can be out performed by
     longer memory strategies.
