--- a/main.tex
+++ b/main.tex
@@ -111,16 +111,15 @@ interactions, however, their true effectiveness in tournaments and
 evolutionary dynamics has been questioned~\cite{adami2013, Hilbe2013b,
 Hilbe2013, Hilbe2015, Knight2018, Harper2015}.
 
-In a similar fashion to~\cite{Press2012} the purpose of this work is to consider
-a given memory-one strategy; however, whilst~\cite{Press2012} found a way for a
-player to manipulate a given opponent, this work will consider a
-multidimensional optimisation approach to identify the best response strategy with
-a theory of mind about a given
-group of opponents. The outcomes of our work reinforce known results, namely
-that memory-one strategies must be forgiving to be evolutionarily stable~\cite{Stewart2013, Stewart2016}
-and that longer-memory strategies have a certain form of advantage over short memory
+In~\cite{Press2012} the authors stated that ``Only a player with a theory of
+mind about his opponent can do better, in which case Iterated Prisoner's Dilemma
+is an Ultimatum Game''. The purpose of this work is to investigate the first
+part of this sentence, more specifically, to identify the best response strategy
+with a theory of mind about a given group of opponents. The outcomes of our work
+reinforce known results, namely that memory-one strategies must be forgiving to
+be evolutionarily stable~\cite{Stewart2013, Stewart2016} and that longer-memory
+strategies have a certain form of advantage over short memory
 strategies~\cite{Hilbe2017, Pan2015}.
-
 
 In particular, this work presents a compact method of
 identifying the best response memory-one strategy against a given set of
