move values of RSTP for numerical experiments earlier in the intro

--- a/main.tex
+++ b/main.tex
@@ -93,6 +93,8 @@ where \(S_p\) represents the utilities of the row player and \(S_q\) the
 utilities of the column player. The payoffs, \((R, P, S, T)\), are constrained
 by \(T > R > P > S\) and \(2R > T + S\), and the most common values used in the
 literature are \((R, P, S, T) = (3, 1, 0, 5)\)~\cite{Axelrod1981}.
+The numerical experiments of our manuscript are carried out using these
+payoff values.
 The PD is a one shot game, however, it is commonly studied in a manner where the
 history of the interactions matters. The repeated form of the game is called the
 Iterated Prisoner's Dilemma (IPD).
@@ -129,8 +131,7 @@ This done in tournaments with and without including self interactions. Moreover,
 introduce a well designed framework that allows the comparison of an optimal
 memory one strategy and a more complex strategy which has a larger memory.
 
-The numerical experiments of this manuscript are carried out the payoff values
-of \((R, P, S, T) = (3, 1, 0, 5)\). The source code for the experiments presented
+The source code for the experiments presented
 in this manuscript has been written in a sustainable manner~\cite{Benureau2018}.
 It is open source (\url{https://github.com/Nikoleta-v3/Memory-size-in-the-prisoners-dilemma})
 and tested which ensures the validity of the results. It has also been archived
@@ -240,7 +241,7 @@ It will be used to obtain best response memory-one strategies in tournaments
 with and without self interactions in order to explore the limitations of extortion
 and restricted memory.
 
-\section{Results}
+\section{Results}\label{section:results}
 % \subsection{Best response memory-one strategies}\label{section:best_response_memory_one}
 
 As discussed ZDs have been acclaimed for their robustness
