highlight that the numerical experiments complement the analytical results

--- a/main.tex
+++ b/main.tex
@@ -131,8 +131,9 @@ This done in tournaments with and without including self interactions. Moreover,
 introduce a well designed framework that allows the comparison of an optimal
 memory one strategy and a more complex strategy which has a larger memory.
 
-The source code for the experiments presented
-in this manuscript has been written in a sustainable manner~\cite{Benureau2018}.
+To illustrate the analytical results obtained in this manuscript a number of
+numerical experiments are run. The source code for these experiments has been
+written in a sustainable manner~\cite{Benureau2018}.
 It is open source (\url{https://github.com/Nikoleta-v3/Memory-size-in-the-prisoners-dilemma})
 and tested which ensures the validity of the results. It has also been archived
 and can be found at~\cite{nikoleta_glynatsi_2019}.
