adds a sentence for the closed form results to intro

--- a/main.tex
+++ b/main.tex
@@ -123,9 +123,11 @@ be evolutionarily stable~\cite{Stewart2013, Stewart2016} and that longer-memory
 strategies have a certain form of advantage over short memory
 strategies~\cite{Hilbe2017, Pan2015}.
 
-In particular, this work presents a compact method of
-identifying the best response memory-one strategy against a given set of
-opponents, and evaluates whether it behaves in a
+In particular, this work presents a closed form algebraic expression for the utility
+of a memory-one strategy against a given set of opponents and a compact method of
+identifying it's best response to that given set of opponents whilst having a theory
+of mind. The aim is
+to evaluate whether a best response memory-one strategy behaves in a
 zero-determinant way which in turn indicates whether it can be extortionate.
 This done in tournaments with and without including self interactions. Moreover, we
 introduce a well designed framework that allows the comparison of an optimal
