--- a/main.tex
+++ b/main.tex
@@ -418,7 +418,7 @@ to fight back when being exploited. In~\cite{Hilbe2018} it is shown that partner
 selected in evolutionary settings when populations are large and relationships
 stable and they allow for the evolution of cooperation. A best response memory-one strategy
 in evolutionary settings has not been incorporated in the study of this manuscript, however,
-the best response memory-one strategy with self interactions can used to approximate
+the best response memory-one strategy with self interactions can used to approximate % TODO Vince to work on this a bit
 the behaviour of a evolutionary stable best response memory-one strategy.
 The distribution of SSE for the best response strategy that includes self
 interactions is skewed to the left, however, a positive measure
