adds line break

--- a/main.tex
+++ b/main.tex
@@ -416,7 +416,9 @@ strategy}. Partners
 strategy aims to share the payoff for mutual cooperation, but it is ready
 to fight back when being exploited. In~\cite{Hilbe2018} it is shown that partner strategies are
 selected in evolutionary settings when populations are large and relationships
-stable and they allow for the evolution of cooperation. A best response memory-one strategy
+stable and they allow for the evolution of cooperation.
+
+A best response memory-one strategy
 in evolutionary settings has not been incorporated in the study of this manuscript, however,
 the best response memory-one strategy with self interactions can used to approximate % TODO Vince to work on this a bit
 the behaviour of a evolutionary stable best response memory-one strategy.
