fixes intro sentence to longer memory best responses

--- a/main.tex
+++ b/main.tex
@@ -451,11 +451,12 @@ occur.
     \label{fig:behaviour_violin_plots}
 \end{figure}
 
-The second limitation this paper argues that memory-one extortionate strategies
-face in multi opponents interactions is that of their restricted memory. To demonstrate
-the effectiveness of memory in the IPD we compare the performance of longer-memory
-strategies to memory-one best responses, which has not been previously explored
-in the literature.
+Extortion was not the only characteristic of the ZDs highlighted in~\cite{Press2012}, but it was also the short memory of the strategies.
+We argue that the second limitation ZDs from which they suffer in in multi opponents
+interactions is that of their restricted memory.
+To demonstrate the effectiveness of memory in the IPD we explore a best response
+longer-memory strategy against a given set of memory-one opponents,  and compare
+it's performance to that of a memory-one best response.
 
 In~\cite{Harper2017}, a strategy called \textit{Gambler} which makes
 probabilistic decisions based on the opponent's \(n_1\) first moves, the
