includes stability of defection in discussion

--- a/main.tex
+++ b/main.tex
@@ -530,12 +530,49 @@ quadratic forms in $R^4$, Theorem~\ref{theorem_one}. This was extended to
 include multiple opponents, as the IPD is commonly studied in such situations.
 This formulation allowed us to introduce an approach for identifying memory-one
 best responses to any number of opponents;
-Theorem~\ref{memone_group_best_response}. This does not only have game theoretic
+Theorem~\ref{memone_group_best_response} which does not only have game theoretic
 novelty, but also a mathematical novelty of solving quadratic ratio optimisation
-problems where the quadratics are non concave. Our formulation can be used to obtained further theoretical results, such as
-obtaining a condition for which in an
-environment of memory-one opponents defection is the stable choice, based only
-on the coefficients of the opponents. This is proven in Appendix~\ref{subsection:stability_defection}
+problems where the quadratics are non concave. Moreover, it allowed us to 
+obtaining a condition for which in an environment of memory-one opponents
+defection is the stable choice, based only on the coefficients of the opponents,
+as stated in Lemma~\ref{lemma:stability_of_defection}.
+
+\begin{lemma}\label{lemma:stability_of_defection}
+    In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
+    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
+    defection is stable if the transition probabilities of the
+    opponents satisfy conditions Eq. \ref{eq:defection_condition_one} and Eq. \ref{eq:defection_condition_two}.
+
+    \begin{equation}\label{eq:defection_condition_one}
+        \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0
+    \end{equation}
+
+    while,
+
+    \begin{equation}\label{eq:defection_condition_two}
+        \sum_{i=1} ^ N \bar{a}^{(i)} \neq 0
+    \end{equation}
+\end{lemma}
+
+The proof of Lemma~\ref{lemma:stability_of_defection} is given in
+Appendix~\ref{subsection:stability_defection} and a numerical simulation
+demonstrating the results of Lemma~\ref{lemma:stability_of_defection} is given
+in Fig.~\ref{fig:stability_of_defection}.
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.4\linewidth]{img/stability_of_defection_plots.pdf}
+    \caption{A. For \(q_{1}=(0.22199, 0.87073, 0.20672, 0.91861)\),
+    $q_{2}=(0.48841, 0.61174, 0.76591, 0.51842)$ and
+    $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Eq.~\ref{eq:defection_condition_one} and
+    Eq.~\ref{eq:defection_condition_two} hold and Defector takes over the
+    population. B. For $q_{1}=(0.96703, 0.54723, 0.97268, 0.71482)$,
+    $q_{2}=(0.69773, 0.21609, 0.97627, 0.0062)$ and
+    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails
+    and Defector does not take over the population.
+    These results have been obtained by using~\cite{axelrodproject} an open
+    source research framework for the study of the IPD.}\label{fig:stability_of_defection}
+\end{figure}
 
 This manuscript presented several experimental results. All data for the results
 is archived in~\cite{glynatsi2019}. These results were mainly to investigate the
@@ -931,24 +968,7 @@ An immediate result from our formulation can be
 obtained by evaluating the sign of Eq. \ref{eq:tournament_utility}'s derivative
 at \(p=(0, 0, 0, 0)\). If at that point the
 derivative is negative, then the utility of a player only decreases if they were
-to change their behaviour, and thus \textbf{defection at that point is stable}.
-
-\begin{lemma}\label{lemma:stability_of_defection}
-    In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
-    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
-    defection is stable if the transition probabilities of the
-    opponents satisfy conditions Eq. \ref{eq:defection_condition_one} and Eq. \ref{eq:defection_condition_two}.
-
-    \begin{equation}\label{eq:defection_condition_one}
-        \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0
-    \end{equation}
-
-    while,
-
-    \begin{equation}\label{eq:defection_condition_two}
-        \sum_{i=1} ^ N \bar{a}^{(i)} \neq 0
-    \end{equation}
-\end{lemma}
+to change their behaviour, and thus defection at that point is stable.
 
 \begin{proof}
     For defection to be stable the derivative of the utility
@@ -969,25 +989,5 @@ to change their behaviour, and thus \textbf{defection at that point is stable}.
     Thus the sign of the derivative is negative if and only if
     \( \displaystyle\sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0\).
 \end{proof}
-
-Consider a population for which defection is known to be stable. In that
-population all the members will over time adopt the same behaviour; thus in such
-population cooperation will never take over. This is demonstrated in
-Fig.~\ref{fig:stability_of_defection}.
-These have been simulated using~\cite{axelrodproject} an open
-source research framework for the study of the IPD.
-
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=.4\linewidth]{img/stability_of_defection_plots.pdf}
-    \caption{A. For \(q_{1}=(0.22199, 0.87073, 0.20672, 0.91861)\),
-    $q_{2}=(0.48841, 0.61174, 0.76591, 0.51842)$ and
-    $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Eq.~\ref{eq:defection_condition_one} and
-    Eq.~\ref{eq:defection_condition_two} hold and Defector takes over the
-    population. B. For $q_{1}=(0.96703, 0.54723, 0.97268, 0.71482)$,
-    $q_{2}=(0.69773, 0.21609, 0.97627, 0.0062)$ and
-    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails
-    and Defector does not take over the population.}\label{fig:stability_of_defection}
-\end{figure}
 
 \end{document}
